fix gap top

--- a/assets/scss/cadastro.scss
+++ b/assets/scss/cadastro.scss
@@ -41,11 +41,10 @@
 }
 
 form {
-  transform: translateX(100%);
+  transform: translateY(100%);
   background-color: white;
   width: 100%;
   height: 100%;
-  margin: -152px 0 0 0;
   display: flex;
   flex-direction: column;
   align-content: center;
@@ -66,6 +65,10 @@ form {
 
 .contratante-active {
   filter: grayscale(0%);
+}
+
+.off {
+  display: none;
 }
 
 .musico:hover {
@@ -162,10 +165,6 @@ form {
 }
 
 :-moz-placeholder {
-  color: #fff;
-}
-
-::-moz-placeholder {
   color: #fff;
 }
 
